...
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mW7-c1-vUO">
                                <rect key="frame" x="0.0" y="20" width="375" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="dataEntryField"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="U0T-pQ-yTr"/>
...
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BsI-lJ-5QU">
                                <rect key="frame" x="310" y="58" width="49" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="allowEditingSwitch"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="47" id="eHi-oN-7vh"/>
...
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SdD-sS-IUa">
                                <rect key="frame" x="310" y="97" width="49" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="allowEnterKeySwitch"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="47" id="LhA-XH-IcF"/>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="DEL" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="k6t-IY-HcJ">
                                <rect key="frame" x="256" y="211" width="99" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="deleteTitleField"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="99" id="lVX-5Z-sk0"/>
...
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="DONE" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fow-3C-32Y">
                                <rect key="frame" x="256" y="249" width="99" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="doneTitleField"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="YTq-ZK-mSK"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BeF-gd-HfS">
                                <rect key="frame" x="309" y="287" width="46" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="save"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="OdL-Ke-kCl"/>
...
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ePs-1n-aj5">
                                <rect key="frame" x="310" y="136" width="49" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="allowDecimalsSwitch"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="31" id="61j-gF-ygx"/>
...
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lUR-rS-8fF">
                                <rect key="frame" x="310" y="175" width="49" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="allowNegativesSwitch"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="31" id="NCb-a5-mOn"/>
...
