...
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="vCo-y9-Uo4">
                                <rect key="frame" x="16" y="64" width="343" height="603"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RLl-3p-L8O">
                                        <rect key="frame" x="0.0" y="0.0" width="343" height="301.5"/>
                                        <accessibility key="accessibilityConfiguration" identifier="numericEntryKeypad"/>
                                        <state key="normal" title="Numeric Entry Keypad"/>
                                        <connections>
                                            <segue destination="zln-tX-jiW" kind="show" id="py0-aD-Yn6"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lg5-sy-bXR">
...
